# replicate-bot

./: .env  bot.py  pyproject.toml  requirements.txt  state.py
cogs/: add_prompt.py  audio_gen.py  image_gen.py  image_upload.py  prompt_gen.py  video_gen.py  video_upload.py
utils/: image_manager.py  prompt_manager.py  video_manager.py
